# rmlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/rmlib/: fileio.h  fstream.h  llfio.h  socket.h  status.h  time.h  utility.h  xplat.h
tests/: CMakeLists.txt  fileio-ut.cpp  fstream-ut.cpp  llfio-ut.cpp  main.cpp  socket-ut.cpp  status-ut.cpp  time-ut.cpp
